--- a/hello_javascript/index.html
+++ b/hello_javascript/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+    <script type="text/javascript" src="closer.js"></script>
+    <script type="text/javascript" src="dataType.js"></script>
     <script type="text/javascript" src="hello_javascript.js"></script>
 </body>
 </html>
